test/Fail/Issue154.err
Issue154.agda:9.3-16: error: [ClashingDefinition]
Multiple definitions of X. Previous definition
X is in scope as
  * a postulate Issue154.B.X brought into scope by
    - its definition at Issue154.agda:8.13-14
when scope checking the declaration
  open A public
